added example.env file

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,8 @@
 APP_NAME=subscription_platform
 APP_ENV=development
-APP_KEY=base64:HIuXo+DZIZ5V+MBlNHhNy5amf0RG6sjv7a5REuQ/Fj0=
+APP_KEY=
 APP_DEBUG=true
-APP_URL=http://admin-service.test.ideopay.in
-
-LOG_CHANNEL=stack
+APP_URL=
 
 DB_CONNECTION=mysql
 
