added mail config keys

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,10 @@ DB_PORT=3306
 DB_DATABASE=subscription_platform
 DB_USERNAME=
 DB_PASSWORD=
+
+MAIL_DRIVER=
+MAIL_HOST=
+MAIL_PORT=
+MAIL_USERNAME=
+MAIL_PASSWORD=
+MAIL_ENCRYPTION=
